Working PDF reader

--- a/uploads/manifest.json
+++ b/uploads/manifest.json
@@ -132,5 +132,10 @@
   "1754743909623": {
     "documentId": "1754743909623",
     "fileName": "1754743909623.pdf"
+  },
+  "1754848394499": {
+    "documentId": "1754848394499",
+    "fileName": "1754848394499.pdf",
+    "title": "Teszt"
   }
 }
