email and resend  body text modification

--- a/uploads/manifest.json
+++ b/uploads/manifest.json
@@ -133,9 +133,8 @@
     "documentId": "1754743909623",
     "fileName": "1754743909623.pdf"
   },
-  "1754848394499": {
-    "documentId": "1754848394499",
-    "fileName": "1754848394499.pdf",
-    "title": "Teszt"
+  "1754858794841": {
+    "documentId": "1754858794841",
+    "fileName": "1754858794841.pdf"
   }
 }
