ready to deploy, build OK

--- a/uploads/manifest.json
+++ b/uploads/manifest.json
@@ -1,140 +1,8 @@
-{
-  "1754676241110": {
-    "documentId": "1754676241110",
-    "fileName": "1754676241110.pdf"
-  },
-  "1754676254326": {
-    "documentId": "1754676254326",
-    "fileName": "1754676254326.pdf"
-  },
-  "1754676388518": {
-    "documentId": "1754676388518",
-    "fileName": "1754676388518.pdf"
-  },
-  "1754676429606": {
-    "documentId": "1754676429606",
-    "fileName": "1754676429606.pdf",
-    "title": "Kiss Viktória adásvételi szerződfés"
-  },
-  "1754676649703": {
-    "documentId": "1754676649703",
-    "fileName": "1754676649703.pdf",
-    "title": "NAgy Béla tervezet"
-  },
-  "1754676795642": {
-    "documentId": "1754676795642",
-    "fileName": "1754676795642.pdf",
-    "title": "Teszt adásvétel tervezet"
-  },
-  "1754677097472": {
-    "documentId": "1754677097472",
-    "fileName": "1754677097472.pdf",
-    "title": "Horváth Gergő adásvételi szerződés tervezete"
-  },
-  "1754677105362": {
-    "documentId": "1754677105362",
-    "fileName": "1754677105362.pdf",
-    "title": "Horváth Gergő adásvételi szerződés tervezete"
-  },
-  "1754677254024": {
-    "documentId": "1754677254024",
-    "fileName": "1754677254024.pdf",
-    "title": "1111"
-  },
-  "1754677397653": {
-    "documentId": "1754677397653",
-    "fileName": "1754677397653.pdf",
-    "title": "Tesz Adásvétel"
-  },
-  "1754677869582": {
-    "documentId": "1754677869582",
-    "fileName": "1754677869582.pdf",
-    "title": "Keserű Imre"
-  },
-  "1754678224351": {
-    "documentId": "1754678224351",
-    "fileName": "1754678224351.pdf",
-    "title": "Keserű Imre tervezet"
-  },
-  "1754683465153": {
-    "documentId": "1754683465153",
-    "fileName": "1754683465153.pdf",
-    "title": "555555555"
-  },
-  "1754685170658": {
-    "documentId": "1754685170658",
-    "fileName": "1754685170658.pdf",
-    "title": "5555555"
-  },
-  "1754686396886": {
-    "documentId": "1754686396886",
-    "fileName": "1754686396886.pdf",
-    "title": "dddddddddd"
-  },
-  "1754686577962": {
-    "documentId": "1754686577962",
-    "fileName": "1754686577962.pdf",
-    "title": "fffff"
-  },
-  "1754686673610": {
-    "documentId": "1754686673610",
-    "fileName": "1754686673610.pdf",
-    "title": "ddd"
-  },
-  "1754737883311": {
-    "documentId": "1754737883311",
-    "fileName": "1754737883311.pdf",
-    "title": "dddddddddd"
-  },
-  "1754739512950": {
-    "documentId": "1754739512950",
-    "fileName": "1754739512950.pdf",
-    "title": "Tsztfddd"
-  },
-  "1754740700008": {
-    "documentId": "1754740700008",
-    "fileName": "1754740700008.pdf"
-  },
-  "1754741078311": {
-    "documentId": "1754741078311",
-    "fileName": "1754741078311.pdf"
-  },
-  "1754742106830": {
-    "documentId": "1754742106830",
-    "fileName": "1754742106830.pdf",
-    "title": "gggggggg"
-  },
-  "1754742228911": {
-    "documentId": "1754742228911",
-    "fileName": "1754742228911.pdf",
-    "title": "4444444444"
-  },
-  "1754742753328": {
-    "documentId": "1754742753328",
-    "fileName": "1754742753328.pdf",
-    "title": "333333"
-  },
-  "1754743444024": {
-    "documentId": "1754743444024",
-    "fileName": "1754743444024.pdf",
-    "title": "fffff"
-  },
-  "1754743460804": {
-    "documentId": "1754743460804",
-    "fileName": "1754743460804.pdf",
-    "title": "dddd"
-  },
-  "1754743478552": {
-    "documentId": "1754743478552",
-    "fileName": "1754743478552.pdf",
-    "title": "dddddd"
-  },
-  "1754743909623": {
-    "documentId": "1754743909623",
-    "fileName": "1754743909623.pdf"
-  },
-  "1754858794841": {
-    "documentId": "1754858794841",
-    "fileName": "1754858794841.pdf"
+[
+  {
+    "documentId": "Mintaszerzodes_Jelzalogszerzodes_20250404",
+    "fileName": "Mintaszerzodes_Jelzalogszerzodes_20250404.pdf",
+    "title": "3333",
+    "note": "Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos."
   }
-}
+]
