--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@react-pdf-viewer/core": "3.12.0",
     "@react-pdf-viewer/default-layout": "3.12.0",
+    "@vercel/blob": "^1.1.1",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "pdfjs-dist": "3.11.174",
     "react-dom": "19.1.1"
-   
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
