--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -31,7 +29,7 @@ yarn-error.log*
 .pnpm-debug.log*
 /public/debug
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
 
 # vercel
@@ -43,5 +41,6 @@ next-env.d.ts
 
 #public
 public/uploads/
+uploads/
 public/links/
 public/tasks/*
